Index and identifier are commented out.

--- a/JqClone.cabal
+++ b/JqClone.cabal
@@ -30,11 +30,11 @@ license:             BSD3
 license-file:        LICENSE
 
 -- The package author(s).
-author:              Your Name
+author:              Thomas Streefkerk
 
 -- An email address to which users can send suggestions, bug reports, and
 -- patches.
-maintainer:          youremail@tudelft.nl
+maintainer:          t.s.streefkerk@student.tudelft.nl
 
 -- A copyright notice.
 -- copyright:
